[package]
name = "verus_temporal_logic"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A Verus embedding of TLA+ temporal logic, ported from the Anvil verifier."

[dependencies]
vstd = "=0.0.0-2026-06-14-0213"

[[bin]]
name = "mutex_example"
path = "src/mutex_example.rs"

[package.metadata.verus]
verify = true
